--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,8 @@
 </head>
 <body>
     <!-- PAGE CONTENT GOES HERE -->
+    <script src="https://newbrie.github.io/Electtrek/static/map.js"></script>
+
     <main class="container-fluid">
         {% block map %}
         {% endblock %}
@@ -45,7 +47,6 @@
     <!-- ALL MODALS SHOULD BE HERE -->
     {% block modals %}
     {% endblock %}
-
 
 </body>
 </html>
