--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
 </head>
 <body>
     <!-- PAGE CONTENT GOES HERE -->
-    <script src="https://newbrie.github.io/Electtrek/static/map.js"></script>
+    <script src="https://newbrie.github.io/Electtrek/static/dashutilities.js"></script>
 
     <main class="container-fluid">
         {% block map %}
@@ -47,6 +47,7 @@
     <!-- ALL MODALS SHOULD BE HERE -->
     {% block modals %}
     {% endblock %}
+  <script src="https://newbrie.github.io/Electtrek/static/dashdomcontent.js"></script>
 
 </body>
 </html>
