--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,8 @@
     <!-- ALL MODALS SHOULD BE HERE -->
     {% block modals %}
     {% endblock %}
+  <script src="https://newbrie.github.io/Electtrek/static/resourcing.js"></script>
+
   <script src="https://newbrie.github.io/Electtrek/static/dashutilities.js"></script>
 
   <script src="https://newbrie.github.io/Electtrek/static/dashdomcontent.js"></script>
