--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -4,7 +4,8 @@
 <div id="mapwin" class="innertube">
 
   <div id="iframe-container">
-    <iframe id="iframe1" src="{{ url_for('thru', path=mapfile) }}" width="1200" height="800"></iframe>
+
+    <iframe id="iframe1" src="{{ url_for('thru', path=mapfile) }}"></iframe>
   </div>
     <!-- Login Screen -->
     <div id="loginScreen">
